--- a/Site-Pessoal/style.css
+++ b/Site-Pessoal/style.css
@@ -1,5 +1,8 @@
 body {
     background-color: #f7f7f7;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    max-width: 900px;
+    margin: auto;
 }
 
 #title, .subtitle, .post_title {
@@ -13,6 +16,16 @@ body {
     margin-bottom: 15px;
 }
 
+#title {
+    font-size: 30px;
+    text-transform: uppercase;
+}
+
+a {
+    text-decoration: line-through;
+    color: #505050;
+}
+
 .post {
     background-color: #fff;
     padding: 15px;
@@ -24,6 +37,7 @@ body {
 .post_content {
     margin: 0;
     margin-bottom: 15px;
+    text-align: justify;
 }
 
 #photo_profile {
@@ -35,4 +49,15 @@ body {
 #image_post1 {
     height: 250px;
     margin-bottom: 15px;
+    /* width: 100%; */
+}
+
+.context_list {
+    list-style-type: none;
+    padding: 15px;
+    margin: 0;
+}
+
+.context_list li a {
+    text-decoration: none;
 }
